force-app/main/default/objects/Lead__c/fields/Acknowledgement_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgement_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acknowledgement Checkbox</label>
    <type>Checkbox</type>
</CustomField>