force-app/main/default/objects/Lead__c/fields/Ailment__c.field-meta.xml
<CustomField>
    <fullName>Ailment__c</fullName>
    <label>Ailment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>