force-app/main/default/objects/Lead__c/fields/Available_Days__c.field-meta.xml
<CustomField>
    <fullName>Available_Days__c</fullName>
    <label>Available Days</label>
    <type>TextArea</type>
</CustomField>