force-app/main/default/objects/Lead__c/fields/Available_Days_for_Service__c.field-meta.xml
<CustomField>
    <fullName>Available_Days_for_Service__c</fullName>
    <formula>ABS(Service_Available_start_Date__c -  Service_Available_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available Days for Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>