force-app/main/default/objects/Lead__c/fields/Care_Required_Days__c.field-meta.xml
<CustomField>
    <fullName>Care_Required_Days__c</fullName>
    <formula>ABS(Care_Required_Start_Date__c - Care_Required_End_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Care Required Days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>