force-app/main/default/objects/Lead__c/fields/Care_Required_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Care_Required_End_Date__c</fullName>
    <label>Care Required End Date</label>
    <type>Date</type>
</CustomField>