force-app/main/default/objects/Lead__c/fields/Care_Required_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Care_Required_Start_Date__c</fullName>
    <label>Care Required Start Date</label>
    <type>Date</type>
</CustomField>