force-app/main/default/objects/Lead__c/fields/consent_form_seekrAged__c.field-meta.xml
<CustomField>
    <fullName>consent_form_seekrAged__c</fullName>
    <label>consent_form_seekrAged</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>