force-app/main/default/objects/Lead__c/fields/consent_form_seekrrelatedName__c.field-meta.xml
<CustomField>
    <fullName>consent_form_seekrrelatedName__c</fullName>
    <label>consent_form_seekrrelatedName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>