force-app/main/default/objects/Lead__c/fields/consent_form_seekrresident__c.field-meta.xml
<CustomField>
    <fullName>consent_form_seekrresident__c</fullName>
    <label>consent_form_seekrresident</label>
    <type>TextArea</type>
</CustomField>