force-app/main/default/objects/Lead__c/fields/consent_form_seekrtreatment__c.field-meta.xml
<CustomField>
    <fullName>consent_form_seekrtreatment__c</fullName>
    <label>consent_form_seekrtreatment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>