force-app/main/default/objects/Lead__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Mailing Country</label>
    <length>225</length>
    <type>Text</type>
</CustomField>