force-app/main/default/objects/Lead__c/fields/Education_Qualification__c.field-meta.xml
<CustomField>
    <fullName>Education_Qualification__c</fullName>
    <label>Education Qualification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>