force-app/main/default/objects/Lead__c/fields/Interested_in_availing_services_with_CLT__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_availing_services_with_CLT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in availing services with CLT</label>
    <type>Checkbox</type>
</CustomField>