force-app/main/default/objects/Lead__c/fields/isConvert__c.field-meta.xml
<CustomField>
    <fullName>isConvert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isConvert</label>
    <type>Checkbox</type>
</CustomField>