force-app/main/default/objects/Lead__c/fields/Lead_Status__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status__c</fullName>
    <label>Lead Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Need Analysis</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>Closed - Converted</fullName>
                <isActive>false</isActive>
                <label>Closed - Converted</label>
            </value>
            <value>
                <fullName>Closed - Not Converted</fullName>
                <isActive>false</isActive>
                <label>Closed - Not Converted</label>
            </value>
            <value>
                <fullName>Open - Not Contacted</fullName>
                <isActive>false</isActive>
                <label>Open - Not Contacted</label>
            </value>
            <value>
                <fullName>Working - Contacted</fullName>
                <isActive>false</isActive>
                <label>Working - Contacted</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>