force-app/main/default/objects/Lead__c/fields/MobilePhone__c.field-meta.xml
<CustomField>
    <fullName>MobilePhone__c</fullName>
    <label>Personal Mobile</label>
    <type>Phone</type>
</CustomField>