force-app/main/default/objects/Lead__c/fields/Need_Provider_for_how_many_days__c.field-meta.xml
<CustomField>
    <fullName>Need_Provider_for_how_many_days__c</fullName>
    <label>Need Provider for how many days?</label>
    <type>TextArea</type>
</CustomField>