force-app/main/default/objects/Lead__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provider</label>
    <type>Checkbox</type>
</CustomField>