force-app/main/default/objects/Lead__c/fields/Qualification_Type__c.field-meta.xml
<CustomField>
    <fullName>Qualification_Type__c</fullName>
    <label>Lead Qualifying Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Team</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>