force-app/main/default/objects/Lead__c/fields/Service_Available_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Service_Available_End_Date__c</fullName>
    <label>Service Available End Date</label>
    <type>Date</type>
</CustomField>