force-app/main/default/objects/Lead__c/fields/State_Province__c.field-meta.xml
<CustomField>
    <fullName>State_Province__c</fullName>
    <label>Mailing State/Province</label>
    <length>225</length>
    <type>Text</type>
</CustomField>