force-app/main/default/objects/Lead__c/fields/Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Postal_Code__c</fullName>
    <label>Mailing Zip/Postal Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>