force-app/main/default/objects/Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FirstName__c</columns>
    <columns>LastName__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Rating__c</columns>
    <columns>Qualified__c</columns>
    <columns>Phone__c</columns>
    <columns>Email__c</columns>
    <columns>Qualification_Type__c</columns>
    <columns>Lead_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>